# telegram_bot_timewarrior

./: .pylintrc  LICENSE  README.md  config.json.template  export_to_excel.py  pyproject.toml  requirements.txt  timewarrior.cfg  timewarrior_bot_bild.py  timewarrior_bot_text.py
tests/: format.sh
