[tool.poetry]
name = "telegram-bot-timewarrior"
version = "0.1.0"
description = "A telegram bot acting as timewarrior frontend"
authors = ["Michael Kluge <vollseil@mailbox.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "telegram_bot_timewarrior"}]

[tool.poetry.dependencies]
python = "^3.10"
telepot = "^12.7"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
